# finally

./: CLAUDE.MD  README.md
.claude/: settings.json  settings.local.json
.claude/agents/: change-reviewer.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/market/: __init__.py  base.py  cache.py  massive.py  simulator.py
backend/tests/market/: test_massive.py  test_simulator.py
planning/: MARKET_DATA_SUMMARY.md  MASSIVE_API.md  PLAN.md  REVIEW.md
planning/archive/: MARKET_INTERFACE.md  MARKET_SIMULATOR.md
scripts/: start_windows.ps1
